--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
-.App {
-  text-align: center;
+ .nav-ul li {
+  display: inline-block;
+  padding: 10px;
 }
 
 .App-logo {
@@ -13,19 +14,35 @@
   }
 }
 
-.App-header {
+.nav-ul {
+  padding: 5px;
+  margin: 0px;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px;
+  }
+
+.register {
+  margin-left: 30%;
+}
+
+.inputBox {
+  padding: 7px;
+  display: block;
+  border: 1px solid;
+  width: 300px;
+  margin: 20px;
+}
+
+.appButton {
+  margin: 20px;
+  width: 150px;
+  padding: 10px;
+  cursor: pointer;
 }
 
 @keyframes App-logo-spin {
@@ -37,16 +54,3 @@
   }
 }
 
-.chart-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center; 
-  padding: 30px;
-  font-size: large;
-}
-
-.candlestick-container {
-  width: 90%; 
-  margin: 0 auto;
-  padding: 30px; 
-}
