Settings improved, attempted to make functional
need to add more shit, does not function idk how mongodb works

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,3 +59,12 @@
   }
 }
 
+.form-group{
+  padding: 7px;
+  display: block;
+  width: 700px;
+  margin: 20px;
+  line-height: 300%;
+  margin-left: 20%;
+}
+
